[package]
name = "crypta"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypta"
path = "src/lib.rs"

[[bin]]
name = "crypta"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rops = { version = "0.1", features = ["yaml", "age", "aes-gcm", "sha2"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
git2 = "0.18"
arboard = "3.4"

[dev-dependencies]
tempfile = "3.14"
