[package]
name = "crypta"
version = "0.1.5"
edition = "2021"

[lib]
name = "crypta"
path = "src/lib.rs"

[[bin]]
name = "crypta"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
git2 = "0.18"
arboard = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
