[package]
name = "crypta"
version = "0.1.6"
edition = "2021"
description = "Gestor de secretos moderno escrito en Rust puro, compatible con SOPS/Age para encriptación de secretos y sincronización automática con Git."
license = "MIT"
repository = "https://github.com/atareao/crypta"
homepage = "https://github.com/atareao/crypta"
keywords = ["secrets", "sops", "age", "encryption", "git"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"

[lib]
name = "crypta"
path = "src/lib.rs"

[[bin]]
name = "crypta"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
git2 = "0.18"
arboard = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.14"
